# stock_rule_based

./: .gitignore  DUPLICATE_RULES_FIX_SUMMARY.md  README.md  STORY_029_ACTUAL_STATUS.md  analyze_strategies_log.txt  arch_review.md  check_rules.bat  clean_database.py  cleanup_database.bat  cleanup_db.bat  clear_and_recalculate_log.md  clear_and_recalculate_log.txt  config.yaml  config_big.yaml  conftest.py  coverage.xml  debug_alignment.py  debug_app_data.py  debug_atr.py  debug_hammer.py  debug_market_load.py  debug_signals.py  fix_tests.py  mcp_settings.json  pyproject.toml  pytest_results.txt  requirements.txt  reset_db_only.bat  reset_full.bat  resolved_issues.md  rules.yaml  rules_performance_report.csv  run.py  run_log.txt  strategy_performance_report.csv  technical_debt.md  temp_debug_signals.py  test_chandelier_vs_baseline.py  test_frequency_fix.py  test_output.csv  (+6 more)
.amazonq/rules/: devrules.md  test_case_fix.md
.github/: copilot-instructions.md
.kiro/hooks/: kailash-principles-check.kiro.hook  test-coverage-guard.kiro.hook
.memory-bank/MEQSAP/: allpepper-memory-bank.md
.memory-bank/kiss-signal-cli/: memory.md_structural_issue_typer_exists_true.md
.memory-bank/kiss_signal/: code_antipatterns.md  structural_test_failures_analysis.md
cache/: INDEX_NSEI.csv  RELIANCE.NS.csv
config/: rules.yaml  rules_baseline_test.yaml  rules_chandelier_test.yaml  rules_ultra_relaxed.yaml
data/: .gitkeep  nifty_large_mid.csv
docs/: arch_review.md  architecture.md  cli-reference.md  code-review-checklist.md  memory.md  prd.md  resolved_issues.md  rule_functions.md  simplified_workflow.md  strategies.md  technical_debt.md
docs/adr/: 004-error-handling-policy.md  adr-002-date-range-handling.md
docs/policies/: error-handling-policy.md
examples/: adani_aggressive.yaml  hdfc_banking.yaml  indian_stock_sample.yaml  ma_crossover.yaml  tcs_conservative.yaml
reports/: signals_2024-01-01.md  signals_2025-01-01.md  signals_2025-08-04.md  signals_2025-08-05.md  signals_2025-08-09.md  signals_2025-08-10.md  signals_2025-08-11.md  signals_2025-08-12.md  signals_2025-08-13.md  signals_2025-08-14.md  signals_2025-08-15.md
scripts/: check_duplicate_rules.py  cleanup_invalid_positions.py
src/: __init__.py
src/kiss_signal/: __init__.py  _version.py  backtester.py  cache.py  cli.py  config.py  data.py  data_manager.py  engine.py  exceptions.py  performance.py  persistence.py  position_manager.py  positions.py  reporter.py  rule_funcs.py  rules.py  signal_generator.py
src/kiss_signal/adapters/: __init__.py  yfinance.py  yfinance_adapter.py
src/meqsap/: __init__.py  backtest.py  cli.py  config.py  data.py  exceptions.py  reporting.py
stories/: 01-project-setup-and-config.md  02-data-acquisition-and-caching.md  03-signal-generation-and-backtesting.md  04-reporting-and-presentation-layer.md  05-cli-integration-and-error-handling.md  06-advanced-backtesting-features.md  DEVELOPMENT_ROADMAP.md  development_roadmap.md  stories_001_to_010_summary.md  stories_011_to_020_summary.md  story_001_project_foundation.md  story_002_data_manager.md  story_003_rule_functions.md  story_004_fix_data_manager_tests.md  story_005_implement_backtesting_engine.md  story_006_implement_signal_generation.md  story_007_implement_sqlite_persistence.md  story_008_implement_reporting_module.md  story_009_implement_position_tracking.md  story_010_architectural_debt_remediation.md  story_011_optimize_signal_accuracy_and_performance.md  story_012_code_quality_and_performance_optimization.md  story_013_expand_rule_library.md  story_014_rule_performance_analysis_and_memory.md  story_015_implement_dynamic_exit_conditions.md  story_016_ implement_strategy performance_leaderboard.md  story_017_implement_per_stock_strategy_analysis_with_config_tracking.md  story_018_implement_atr_based_dynamic_exit_conditions.md  story_019_implement_context_filters_framework.md  story_020_fix_strategy_performance_report_duplication.md  story_021_enforce_mathematical_validation_for_core_indicators.md  story_022_simplify_cli_analysis_commands.md  story_023_implement_stock_personality_preconditions.md  story_024_ruthless_test_suite_refactoring.md  story_025_surgical_coverage_debt_resolution.md  story_026_final_coverage_push.md  story_027_rule_library_and_strategy_search_space.md  story_028_strategy_seeker_mvp.md  story_029_professional_trailing_stop.md  story_030_walk_forward_analysis_mvp.md  (+2 more)
test_cache/: INDEX_NSEI.csv
tests/: __init__.py  conftest.py  pytest_results.txt  test_adapters.py  test_atr_fix.py  test_backtest.py  test_backtester.py  test_backtester_coverage.py  test_cli.py  test_cli_advanced.py  test_cli_basic.py  test_cli_clear_and_recalculate_new.py  test_cli_comprehensive.py  test_cli_coverage.py  test_cli_enhanced.py  test_cli_logic.py  test_cli_min_trades.py  test_cli_min_trades_simple.py  test_complete_rule_stack.py  test_config.py  test_context_filters.py  test_data.py  test_data_advanced.py  test_data_basic.py  test_data_manager.py  test_float_handling.py  test_integration.py  test_integration_backtester.py  test_integration_cli.py  test_market_alignment.py  test_mathematical_accuracy.py  test_min_trades.py  test_pandas_downcasting_fix.py  test_performance.py  test_persistence.py  test_position_sizing.py  test_positions.py  test_reporter.py  test_reporter_additional.py  test_reporter_advanced.py  (+20 more)
tests/fixtures/: sample_backtest_data.csv  test_universe.csv
tests/reference_data/: __init__.py  manual_calculations.py
use_cases/: UPDATE_SUMMARY.md  uc_backtester.md  uc_cli.md  uc_config.md  uc_data.md  uc_persistence.md  uc_reporter.md  uc_rules.md
