[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiss-signal-cli"
version = "1.4.0"
description = "KISS Signal CLI - Keep-It-Simple Signal Generation for NSE Equities"
authors = [{name = "KISS Signal Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "vectorbt>=0.25.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
]

[project.scripts]
quickedge = "kiss_signal.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/kiss-signal-cli"
Repository = "https://github.com/yourusername/kiss-signal-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
python_executable = ".venv/Scripts/python.exe"
python_version = "3.9"

# Module discovery
mypy_path = "src"
packages = ["meqsap"]
namespace_packages = true

# Type checking strictness
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true

# Error output
show_error_codes = true
show_column_numbers = true
color_output = true
error_summary = true
pretty = true

# Cache
cache_dir = ".mypy_cache"
sqlite_cache = true

# Performance
incremental = true
warn_incomplete_stub = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*", 
    "yfinance.*",
    "vectorbt.*",
    "pandas_ta.*",
    "matplotlib.*",
    "seaborn.*",
    "pytest.*",
    "rich.*",
    "yaml.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
